fix: fixing critical problem in core-service with campaign and donation logic, the connection in file and problem with handler in blockchain-service

--- a/config-server/src/main/resources/configs/api-gateway.yaml
+++ b/config-server/src/main/resources/configs/api-gateway.yaml
@@ -6,13 +6,35 @@ spring:
   cloud:
     loadbalancer:
       cache:
-        enabled: false  # Disable cache to always get fresh instances
+        enabled: false
       ribbon:
         enabled: false
     gateway:
+      default-filters:
+        - name: Retry
+          args:
+            retries: 3
+            methods: GET,POST,PUT,DELETE
+            backoff:
+              firstBackoff: 50ms
+              maxBackoff: 500ms
+              factor: 2
+              basedOnPreviousValue: true
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
       httpclient:
-        connect-timeout: 1000
-        response-timeout: 5s
+        connect-timeout: 2000
+        response-timeout: 10s
+        pool:
+          type: elastic
+          max-idle-time: 15s
 
-# Add gateway-specific configurations here if needed
-# For now, gateway uses mostly default configurations
+eureka:
+  client:
+    registry-fetch-interval-seconds: 2
+    instance-info-replication-interval-seconds: 2
+  instance:
+    lease-renewal-interval-in-seconds: 2
+    lease-expiration-duration-in-seconds: 5
