--- a/ai-service/pyproject.toml
+++ b/ai-service/pyproject.toml
@@ -20,6 +20,14 @@ dependencies = [
     "deepface>=0.0.79",
     "google-generativeai>=0.3.0",
     "tf-keras>=2.15.0",
+    "paddlepaddle>=3.3.0",
+    "paddleocr>=3.4.0",
+    # Hybrid Embedding & Cross-modal Retrieval Dependencies
+    "transformers>=4.36.0",
+    "torch>=2.1.0",
+    "asyncpg>=0.29.0",
+    "pgvector>=0.2.4",
+    "httpx>=0.26.0",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
