--- a/core-service/pom.xml
+++ b/core-service/pom.xml
@@ -140,11 +140,12 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/me.paulschwarz/spring-dotenv -->
+		<!-- Source: https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv -->
 		<dependency>
-			<groupId>me.paulschwarz</groupId>
-			<artifactId>spring-dotenv</artifactId>
-			<version>5.1.0</version>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>java-dotenv</artifactId>
+			<version>5.2.2</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
