feat: remake dockerfile, finish building and add Makefile

--- a/blockchain-service/Dockerfile
+++ b/blockchain-service/Dockerfile
@@ -1,27 +1,3 @@
-# Build stage
-FROM golang:1.21-alpine AS builder
-
-# Install required packages
-RUN apk add --no-cache git ca-certificates tzdata
-
-# Set working directory
-WORKDIR /app
-
-# Copy go mod files
-COPY go.mod go.sum ./
-
-# Download dependencies
-RUN go mod download
-
-# Copy source code
-COPY . .
-
-# Build the application
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
-    -ldflags="-w -s" \
-    -o /app/blockchain-service \
-    ./cmd/server
-
 # Final stage
 FROM alpine:3.19
 
@@ -38,11 +14,11 @@ RUN addgroup -g 1001 -S appgroup && \
 # Set working directory
 WORKDIR /app
 
-# Copy binary from builder
-COPY --from=builder /app/blockchain-service .
+# Copy binary from host (must be built locally first)
+COPY blockchain-service .
 
 # Copy .env.example as reference
-COPY --from=builder /app/.env.example .env.example
+COPY .env.example .env.example
 
 # Change ownership
 RUN chown -R appuser:appgroup /app
