--- a/ai-service/Dockerfile
+++ b/ai-service/Dockerfile
@@ -13,10 +13,11 @@ WORKDIR /app
 # Copy dependency files first for caching
 COPY pyproject.toml pdm.lock ./
 
-# Install PDM and export requirements, then install via pip
+# Install PDM, export requirements, install into a venv
 RUN pip install --no-cache-dir pdm && \
     pdm export -o requirements.txt --without-hashes && \
-    pip install --no-cache-dir --prefix=/install -r requirements.txt
+    python -m venv /opt/venv && \
+    /opt/venv/bin/pip install --no-cache-dir -r requirements.txt
 
 # ========================================
 # Stage 2: Runtime
@@ -32,23 +33,29 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Create non-root user
-RUN groupadd -r appuser && useradd -r -g appuser appuser
+# Create non-root user with home directory
+RUN groupadd -r appuser && useradd -r -g appuser -m -d /home/appuser appuser
 
 WORKDIR /app
 
-# Copy installed Python packages from builder
-COPY --from=builder /install /usr/local
+# Copy venv from builder (includes all deps + typing_extensions)
+COPY --from=builder /opt/venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Set cache directories for ML libraries
+ENV HOME=/home/appuser
+ENV HF_HOME=/home/appuser/.cache/huggingface
+ENV TORCH_HOME=/home/appuser/.cache/torch
 
 # Copy application code
 COPY app/ app/
 
-RUN chown -R appuser:appuser /app
+RUN chown -R appuser:appuser /app /home/appuser
 USER appuser
 
 EXPOSE 8000
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=120s --retries=3 \
-  CMD curl -f http://localhost:8000/health || exit 1
+    CMD curl -f http://localhost:8000/health || exit 1
 
 ENTRYPOINT ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
