--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
 services:
+  # =============================================
+  # Infrastructure: Databases & Message Broker
+  # =============================================
   postgres-tamsang:
     image: pgvector/pgvector:pg16
     container_name: tamsang-postgres-tamsang
@@ -13,24 +16,10 @@ services:
       - ./docker-scripts/postgres-tamsang/init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
       timeout: 5s
       retries: 5
-
-  kafka-ui:
-    image: provectuslabs/kafka-ui:latest
-    container_name: tamsang-kafka-ui
-    ports:
-      - "8081:8080"
-    environment:
-      KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
-    depends_on:
-      - kafka
-    restart: unless-stopped
-
-
 
   mongodb:
     image: mongo:latest
@@ -44,7 +33,7 @@ services:
       - mongodb_data:/data/db
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -63,7 +52,7 @@ services:
       - minio_data:/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
       interval: 30s
       timeout: 20s
       retries: 3
@@ -77,7 +66,7 @@ services:
       - redis_data:/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: [ "CMD", "redis-cli", "ping" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -107,11 +96,170 @@ services:
       - kafka_data:/var/lib/kafka/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "kafka-broker-api-versions.sh --bootstrap-server localhost:9092 || exit 1"]
-      interval: 30s
+      test: [ "CMD-SHELL", "/opt/kafka/bin/kafka-broker-api-versions.sh --bootstrap-server localhost:9092 || exit 1" ]
+      interval: 10s
       timeout: 10s
-      retries: 5
-      start_period: 60s
+      retries: 10
+      start_period: 30s
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: tamsang-kafka-ui
+    ports:
+      - "8081:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
+    depends_on:
+      - kafka
+    restart: unless-stopped
+
+  # =============================================
+  # Layer 1: Discovery Server
+  # =============================================
+  discovery-server:
+    image: tawn/discovery-server:latest
+    container_name: tamsang-discovery-server
+    ports:
+      - "8761:8761"
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8761/actuator/health || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
+
+  # =============================================
+  # Layer 2: Config Server
+  # =============================================
+  config-server:
+    image: tawn/config-server:latest
+    container_name: tamsang-config-server
+    ports:
+      - "8888:8888"
+    depends_on:
+      discovery-server:
+        condition: service_healthy
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8888/actuator/health || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
+
+  # =============================================
+  # Layer 3: API Gateway
+  # =============================================
+  api-gateway:
+    image: tawn/api-gateway:latest
+    container_name: tamsang-api-gateway
+    ports:
+      - "8080:8080"
+    depends_on:
+      config-server:
+        condition: service_healthy
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "wget --server-response --spider --quiet http://localhost:8080/ 2>&1 | grep -q 'HTTP' || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
+
+  # =============================================
+  # Layer 4: Business Services
+  # =============================================
+  identity-service:
+    image: tawn/identity-service:latest
+    container_name: tamsang-identity-service
+    env_file:
+      - ./identity-service/.env
+    ports:
+      - "8082:8080"
+    depends_on:
+      api-gateway:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      postgres-tamsang:
+        condition: service_healthy
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    restart: unless-stopped
+
+  core-service:
+    image: tawn/core-service:latest
+    container_name: tamsang-core-service
+    env_file:
+      - ./core-service/.env
+    ports:
+      - "8084:8080"
+    depends_on:
+      api-gateway:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      mongodb:
+        condition: service_healthy
+      postgres-tamsang:
+        condition: service_healthy
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    restart: unless-stopped
+
+  file-service:
+    image: tawn/file-service:latest
+    container_name: tamsang-file-service
+    ports:
+      - "8083:8083"
+    depends_on:
+      api-gateway:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+    env_file:
+      - ./file-service/.env
+    volumes:
+      - ./file-service/.env:/app/.env:ro
+    restart: unless-stopped
+
+  blockchain-service:
+    image: tawn/blockchain-service:latest
+    container_name: tamsang-blockchain-service
+    ports:
+      - "8085:8085"
+    depends_on:
+      api-gateway:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      postgres-tamsang:
+        condition: service_healthy
+    env_file:
+      - ./blockchain-service/.env
+    volumes:
+      - ./blockchain-service/.env:/app/.env:ro
+    restart: unless-stopped
+
+  ai-service:
+    image: tawn/ai-service:latest
+    container_name: tamsang-ai-service
+    ports:
+      - "8000:8000"
+    depends_on:
+      api-gateway:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+    env_file:
+      - ./ai-service/.env
+    volumes:
+      - ./ai-service/.env:/app/.env:ro
+    restart: unless-stopped
 
 volumes:
   postgres_tamsang_data:
