--- a/config-server/src/main/resources/configs/file-service.yaml
+++ b/config-server/src/main/resources/configs/file-service.yaml
@@ -1,6 +1,6 @@
 # Minio Configuration
 minio:
-  endpoint: http://minio:9000
+  endpoint: http://localhost:9000
   access-key: minioadmin
   secret-key: minioadmin
   bucket-name: file-service-bucket
