feat: Add GitHub Actions workflows for building and pushing Docker images for identity-service, api-gateway, config-server, core-service, and discovery-server.

--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -22,6 +22,10 @@ jobs:
           cache: maven
           cache-dependency-path: api-gateway/pom.xml
 
+      - name: Make mvnw executable
+        run: chmod +x mvnw
+        working-directory: api-gateway
+
       - name: Build JAR
         run: ./mvnw clean package -DskipTests
         working-directory: api-gateway
