--- a/config-server/src/main/resources/configs/identity-service.yaml
+++ b/config-server/src/main/resources/configs/identity-service.yaml
@@ -18,7 +18,7 @@ jwt:
   refreshable-duration: 72000 # in hours
 
 minio:
-  endpoint: http://localhost:9000
+  endpoint: http://${MINIO_HOST:localhost}:${MINIO_PORT:9000}
   access-key: minioadmin
   secret-key: minioadmin
   bucket-name: identity-images
@@ -26,7 +26,7 @@ minio:
 
 spring:
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_HOST:localhost}:${KAFKA_PORT:9092}
     consumer:
       group-id: identity-service-group
       auto-offset-reset: earliest
@@ -47,4 +47,4 @@ feign:
   client:
     config:
       file-service:
-        url: http://localhost:8083
+        url: http://${FILE_SERVICE_HOST:localhost}:${FILE_SERVICE_PORT:8083}
