--- a/core-service/src/main/resources/application.yaml
+++ b/core-service/src/main/resources/application.yaml
@@ -5,11 +5,11 @@ spring:
   application:
     name: core-service
   config:
-    import: "optional:configserver:http://localhost:8888"
+    import: "optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT:8888}"
   
   # PostgreSQL Configuration (Transaction Database)
   datasource:
-    jdbc-url: jdbc:postgresql://localhost:5432/transaction
+    jdbc-url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/transaction
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: ${POSTGRES_PW}
@@ -31,13 +31,13 @@ spring:
   
   # Redis Configuration
   redis:
-    host: localhost
-    port: 6379
+    host: ${REDIS_HOST:localhost}
+    port: ${REDIS_PORT:6379}
     timeout: 2000ms
 
   # Kafka Configuration
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_HOST:localhost}:${KAFKA_PORT:9092}
 
 # PayOS Configuration
 payos:
@@ -54,7 +54,7 @@ jwt:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://${EUREKA_HOST:localhost}:${EUREKA_PORT:8761}/eureka
   instance:
     prefer-ip-address: true
 
